# python_boilerplate

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml
scripts/: change_module_name.sh  test.sh
tests/: test_calculator.py
